fixes from review